fixed spacing rendering

--- a/attributes/spacing.sass
+++ b/attributes/spacing.sass
@@ -10,10 +10,13 @@ $directions: ('all', 'top', 'bottom', 'left', 'right')
 		.is-#{$property}less#{$direction}
 			#{$property}: 0 !important
 
-		@each $size in $sizes
+		.is-#{$property}#{$direction}
+			#{$property}#{$direction}: 0 !important
+
+		@each $size, $value in $sizes
 			$size: toClassName($size, 'default')
 
 			.has-#{$property}#{$direction}#{$size}
 				+bp-responsive
-					#{$property}: $base-spacing
+					#{$property}#{$direction}: $base-spacing * $value
 
